--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     },
     "web": {},
     "extra": {
-      "API_BASE_URL": "http://192.168.1.3:5002/api"
+      "API_BASE_URL": "https://movie-app-backend-eta.vercel.app/api"
     },
     "plugins": [
       [
