Dont know what is going on

--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
     },
     "web": {},
     "extra": {
-      "API_BASE_URL": "https://movie-app-backend-eta.vercel.app/api"
+      "API_BASE_URL": "https://movie-app-backend-ecru.vercel.app/api"
     },
     "plugins": [
       [
