--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.23.7",
     "@types/react": "~19.1.10",
     "@types/react-native": "~0.73.0",
+    "eas-cli": "^16.32.0",
     "typescript": "^5.3.3"
   },
   "private": true
