feat: update app name from "OTT Streaming" to "Play Cube"

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "OTT Streaming",
+    "name": "Play Cube",
     "slug": "ott-streaming-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
